# rperf3-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.3.3.md
.github/workflows/: ci.yml  release.yml  security.yml
docs/: TOKEN_BUCKET.md
examples/: batch_send_test.rs  cancellable_test.rs  client.rs  client_closure_callback.rs  client_with_callback.rs  server.rs  show_json_structure.rs  show_udp_json.rs  tcp_nodelay_test.rs  test_json_output.rs  test_retransmits.rs  token_bucket_demo.rs  udp_buffer_test.rs  udp_client.rs
src/: batch_socket.rs  buffer_pool.rs  client.rs  config.rs  error.rs  interval_reporter.rs  lib.rs  measurements.rs  protocol.rs  server.rs  token_bucket.rs  udp_packet.rs
tests/: async_error_tests.rs  callback_tests.rs  integration_tests.rs  mock_tests.rs
web-ui/: Cargo.toml  QUICKSTART.md  README.md
web-ui/src/: main.rs
web-ui/src/api/: mod.rs  models.rs  routes.rs  sse.rs
web-ui/src/test_manager/: mod.rs  runner.rs  state.rs
