[package]
name = "rperf3-rs"
version = "0.2.0"
edition = "2021"
authors = ["Arunkumar Mourougappane <amouroug@buffalo.edu>"]

[[bin]]
name = "rperf3"
path = "src/bin/main.rs"

[lib]
name = "rperf3"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2.0.17"
byteorder = "1"
chrono = "0.4"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
hostname = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
